force-app/main/default/objects/custom_create164__c/custom_create164__c.object-meta.xml
<CustomObject>
    <label>Custom created object164</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects164</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>