force-app/main/default/objects/custom_create164__c/fields/custom_create_164field542__c.field-meta.xml
<CustomField>
    <fullName>custom_create_164field542__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 164field542</label>
    <type>Checkbox</type>
</CustomField>