force-app/main/default/objects/custom_create164__c/fields/custom_create_164field544__c.field-meta.xml
<CustomField>
    <fullName>custom_create_164field544__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 164field544</label>
    <type>Checkbox</type>
</CustomField>